# QPtomographer

./: .gitignore  CMakeLists.txt  LICENSE.txt  MANIFEST.in  QPtomographer.ai  README.md  setup.py
QPtomographer/: __init__.py  _version.py  util.py
cmake/: FindSCS.cmake  FindTomographerPy.cmake
cxx/: channelspace.h  diamond_norm_figofmerit.h  diamond_norm_scs.h  dnormtomo_use_scs.h  entglfidelity_figofmerit.h  pydnormbistates.cxx  pydnormchannelspace.cxx  pyfigofmerit.cxx  pyutils.h  qptomo_use_scs.h  test_channelspace.cxx  test_diamond_norm.cxx  testutils.h  utils.h  worstentglfidelity_figofmerit.h
dnormtomo/: __init__.py  _version.py  util.py
doc/: Makefile  QPtomographer._members.rst  QPtomographer.bistates.rst  QPtomographer.channelspace.rst  QPtomographer.figofmerit.rst  QPtomographer.rst  QPtomographer.util.rst  api_conventions.rst  conf.py  dnormtomo._members.rst  dnormtomo.bistates.rst  dnormtomo.channelspace.rst  dnormtomo.figofmerit.rst  dnormtomo.rst  dnormtomo.util.rst  figures_of_merit.rst  index.rst  install.rst  make.bat
doc/_static/: custom.css
examples/: README.md
examples/2qubits-noisy-identity/: run.ipynb  run.py
examples/qubit-noisy-identity/: run.ipynb  run.py  run_export.py  run_old.ipynb  simple.py
examples/simple-qubit-noisy-identity/: run.ipynb  run_export.py
test/: CMakeLists.txt  test_channelspace.cxx  test_diamond_norm.cxx  test_entanglement_fidelity.cxx  test_utils.cxx  test_worst_entanglement_fidelity.cxx  testutils.h
